fix persistant highlighting of picks on mobile

--- a/src/css/bracket.css
+++ b/src/css/bracket.css
@@ -177,9 +177,11 @@
         outline: none;
     }
 
-    &:hover {
-        background: rgba(56, 161, 105, 0.15);
-        color: #38a169;
+    @media (hover: hover) {
+        &:hover {
+            background: rgba(56, 161, 105, 0.15);
+            color: #38a169;
+        }
     }
 }
 
